// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget07 matches custom props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-header cardClass"
  >
    <div
      class="font-weight-bold"
    >
      <span>
        rightHeader
      </span>
       
      <span
        class="float-right"
      >
        leftHeader
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter
        </small>
      </span>
       
      <span
        class="float-right"
      >
        <small>
          leftFooter
        </small>
      </span>
    </div>
     
  </div>
</div>
`;

exports[`CWidget07 matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-header bg-primary"
  >
    <div
      class="font-weight-bold"
    >
      <span>
        rightHeader:string
      </span>
       
      <span
        class="float-right"
      >
        leftHeader:string
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter:string
        </small>
      </span>
       
      <span
        class="float-right"
      >
        <small>
          leftFooter:string
        </small>
      </span>
    </div>
     
  </div>
</div>
`;
